# archcanvas

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  .prettierignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app_spec.txt  capacitor.config.ts  claude-progress.txt  components.json  eslint.config.js  index.html  init.sh  landing.Dockerfile  nginx-landing.conf  nginx.conf  package-lock.json  package.json  playwright.config.bridge.ts  playwright.config.demo.ts  playwright.config.landing.ts  playwright.config.no-bridge.ts  playwright.config.ts  playwright.config.visual.ts  tsconfig.build.json  tsconfig.build.tsbuildinfo  tsconfig.json  tsconfig.landing.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.test.json  tsconfig.tsbuildinfo  tsup.cli.config.ts  vite.config.bridge-sidecar.ts  vite.config.bridge.ts  (+5 more)
.archcanvas/: ai-bridge.yaml  main.archc  main.summary.md  main.yaml  react-spa.yaml  tauri-shell.yaml
bak/: CLAUDE.md  README.md  architecture-improvements.md  capacitor.config.ts  claude-progress.txt  implementation-plan-v2.txt  ios-build-guide.md  tsconfig.cli.json  tsconfig.json  vite.config.d.ts.map  vite.config.ts
dist-landing/: index.html
docs/: archcanvas-v2-design.md
examples/: create-badges-test-file.mjs  create-coderef-roles-test.mjs  create-edge-test-file.mjs  create-future-version-test.mjs  create-nested-layout-test.mjs  create-suggestion-test-file.mjs  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+1936 files in other folders)
