[package]
name = "archcanvas"
version = "0.5.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ctrlc = { version = "3", features = ["termination"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
